--- a/text.html
+++ b/text.html
@@ -8,72 +8,44 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-        <!-- Bootstrap CSS CDN-->
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
-        <link rel="stylesheet" href="src/bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css" type="text/css">
-
-        <!-- Font Awesome CND -->
-        <!-- <script src="https://kit.fontawesome.com/00da9fe329.js" crossorigin="anonymous"></script> -->
-        <link href="src/fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet">
+        <!-- Bootstrap-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         
+        <!-- FontAwesome -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/style.css" type="text/css">
 
-        <title>Dyslexer</title>
+        <title>Dyslexer - Text</title>
     </head>
     <body>
-        <a href="https://github.com/mkfizi/dyslexer" class="github-corner" aria-label="View source on GitHub">
-            <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
-                <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-                <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
-                <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
-            </svg>
-        </a>
+        <nav id="navbar-text" class="navbar container-fluid border-bottom">     
+            <a href="index.html"><img src="img/logo-sm.png" alt="" class="float-left"></a>
+            <button id="paste" type="button mx-3" class="btn btn-primary">Paste</button>
+        </nav>
 
-        <section id="home" class="container text-center">
-            <img src="img/logo.png" alt="" class="mx-auto d-block my-5">
-            <div class="display-1 my-5">Dyslexer</div>
-            <h1 class="my-3">Text and website font converter for dyslexia</h1>
-            <div class="my-1 d-block d-sm-none"></div>
-            <div class="my-5 d-none d-sm-block"></div>
-            <div class="row">
-                <div class="offset-sm-4 col-sm-4 d-sm-flex justify-content-between">
-                    <a href="" class="btn btn-rounded btn-outline-primary my-1">
-                        Convert Text
-                        <i class="far fa-clipboard"></i>
-                    </a>
-                    <a href="" class="btn btn-rounded btn-primary my-1">
-                        Convert Web
-                        <i class="fas fa-globe"></i>
-                    </a>
-                </div>
+        <div class="menu position-absolute">
+            
+            <input type="color" class="d-none" name="text-color" value="#ff0000"><br>
+
+            <div class="btn-group-vertical" role="group" aria-label="Button">
+                <button id="text-increase" type="button" class="btn btn-outline-primary btn-menu">A<i class="fas fa-long-arrow-alt-up"></i></button>
+                <button id="text-decrease" type="button" class="btn btn-outline-primary btn-menu">A<i class="fas fa-long-arrow-alt-down"></i></button>
             </div>
-        </section>
+        </div>
 
-        <section id="about" class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <img src="img/OpenDyslexic.png" class="img-fluid" alt="">
-                </div>
-                <div class="col-sm-6">
-                    <h2 class="my-3">About</h2>
-                    <p>
-                        Dyslexer is an online tool to convert font to dyslexic friendly font. This tool aims to increase accessibility and ease readibility for users who suffers common symptoms of dyslexia.
-                        </br>
-                        </br>
-                        Dyslexer is developed by <a href="https://mkfizi.github.io" target="_blank">mkfizi</a>. It is open source and can be used in any project. The source code can be found at <a href="https://github.com/mkfizi/dyslexer" target="_blank">GitHub</a>.
-                    </p>
-                </div>
-            </div>
-        </section>
+        <div id="input-text">
+            <textarea class="w-100" name="" id="" cols="30" rows="10"></textarea>
+        </div>
 
-        <footer>
-            <p class="small"></p>
+        <footer class="py-1">
+            <p class="text-center small m-0">© <a href="https://mkfizi.github.io" target="_blank">mkfizi</a> 2020</p>
         </footer>
-        <!-- Bootstrap JS CDN-->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script> -->
-        <script src="src/bootstrap-5.0.0-beta1-dist/js/bootstrap.bundle.min.js"></script>
 
+        <!-- Bootstrap JS CDN-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+ 
         <!-- Custom JS-->
         <script src="js/script.js"></script>
     </body>
