--- a/text.html
+++ b/text.html
@@ -20,28 +20,35 @@
         <title>Dyslexer - Text</title>
     </head>
     <body>
-        <nav id="navbar-text" class="navbar container-fluid border-bottom">     
+        <nav id="navbar" class="navbar container-fluid border-bottom position-relative">     
             <a href="index.html"><img src="img/logo-sm.png" alt="" class="float-left"></a>
-            <button id="paste" type="button mx-3" class="btn btn-primary">Paste</button>
+            <div>
+                <button id="btn-paste" type="button mx-3" class="btn btn-primary">
+                    Paste
+                </button>
+                <button id="btn-setting" class="btn-setting">
+                    <i class="fas fa-ellipsis-v"></i>
+                </button>
+            </div>
         </nav>
 
-        <div class="menu position-absolute">
-            
-            <input type="color" class="d-none" name="text-color" value="#ff0000"><br>
-
+        <div id="setting" class="position-absolute">
+            <input id="input-color" type="color" class="input-color mb-3" name="text-color" value="#ff0000"><br>
             <div class="btn-group-vertical" role="group" aria-label="Button">
-                <button id="text-increase" type="button" class="btn btn-outline-primary btn-menu">A<i class="fas fa-long-arrow-alt-up"></i></button>
-                <button id="text-decrease" type="button" class="btn btn-outline-primary btn-menu">A<i class="fas fa-long-arrow-alt-down"></i></button>
+                <button id="btn-increase" type="button" class="btn btn-outline-primary btn-menu">
+                    A<i class="fas fa-long-arrow-alt-up"></i>
+                </button>
+                <button id="btn-decrease" type="button" class="btn btn-outline-primary btn-menu">
+                    A<i class="fas fa-long-arrow-alt-down"></i>
+                </button>
             </div>
         </div>
 
-        <div id="input-text">
-            <textarea class="w-100" name="" id="" cols="30" rows="10"></textarea>
-        </div>
+        <div id="bar" class="position-absolute"></div>
 
-        <footer class="py-1">
-            <p class="text-center small m-0">© <a href="https://mkfizi.github.io" target="_blank">mkfizi</a> 2020</p>
-        </footer>
+        <div id="display">
+            <textarea id="text-display" type="text" class="text-input w-100" placeholder="Write text here"></textarea>
+        </div>
 
         <!-- Bootstrap JS CDN-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
