dyslexer text - add clear and reading overlay

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <section id="home">
             <div class="container text-center">
-                <img src="img/logo.png" alt="" class="mx-auto d-block my-5">
+                <img src="img/logo.png" alt="" class="mx-auto d-block py-5">
                 <div class="display-1 my-5">Dyslexer</div>
                 <h1 class="my-3">Text and website font converter for dyslexia</h1>
                 <div class="my-1 d-block d-sm-none"></div>
