dyslexer text - complete basic functions

--- a/text.html
+++ b/text.html
@@ -21,6 +21,7 @@
     </head>
     <body>
         <div id="bar" class="position-absolute"></div>
+        
         <nav id="navbar" class="navbar container-fluid border-bottom position-relative">     
             <a href="index.html"><img src="img/logo-sm.png" alt="" class="float-left"></a>
             <div>
@@ -35,6 +36,10 @@
         
 
         <div id="setting" class="position-absolute">
+            <button id="btn-overlay" type="button" class="mb-3">
+                <i class="fas fa-glasses"></i>
+            </button>
+            <br>
             <input id="input-color" type="color" class="input-color mb-3" name="text-color" value="#C0C0C0">
             <br>
             <div class="btn-group-vertical" role="group" aria-label="Button">
