--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-        <!-- Bootstrap-->
+        <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         
         <!-- FontAwesome -->
@@ -21,7 +21,7 @@
     </head>
     <body>
         <a href="https://github.com/mkfizi/dyslexer" class="github-corner" aria-label="View source on GitHub">
-            <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
+            <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#F9FCFF; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
                 <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
                 <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
                 <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
@@ -59,13 +59,13 @@
                     <div class="col-sm-6">
                         <h2 class="my-3">About</h2>
                         <p>
-                            Dyslexer is an online tool to convert font to dyslexic friendly font. This tool aims to increase accessibility and ease readibility for users who suffers dyslexia.
+                            Dyslexer is an online tool font converter that convert fonts to dyslexic friendly font. This tool aims to increase accessibility and ease readibility for users who suffers dyslexia.
                             </br>
                             </br>
-                            Dyslexer uses <a href="https://opendyslexic.org/" target="_blank">Open Dyslexic</a>, a typeface specifically designed against some common symptoms of dyslexia.
+                            Dyslexer uses <a href="https://opendyslexic.org/" target="_blank">Open Dyslexic</a>, a typeface specifically designed against some common symptoms of dyslexia. This tool is open source and can be used in any project.
                             </br>
                             </br>
-                            Dyslexer is developed by <a href="https://mkfizi.github.io" target="_blank">mkfizi</a>. It is open source and can be used in any project. The source code can be found at <a href="https://github.com/mkfizi/dyslexer" target="_blank">GitHub</a>.
+                            Email to <a href="mailto:mkfizi93@gmail.com">mkfizi93@gmail.com</a> for feedback and suggestions.
                         </p>
                     </div>
                 </div>
@@ -76,10 +76,10 @@
             <p class="text-center small m-0">© <a href="https://mkfizi.github.io" target="_blank">mkfizi</a> 2020</p>
         </footer>
 
-        <!-- Bootstrap JS CDN-->
+        <!-- Bootstrap JS CDN -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
  
-        <!-- Custom JS-->
+        <!-- Custom JS -->
         <script src="js/script.js"></script>
     </body>
 </html>
