dyslexer text - fix readbar js

--- a/text.html
+++ b/text.html
@@ -20,7 +20,7 @@
         <title>Dyslexer - Text</title>
     </head>
     <body>
-        <div id="bar" class="position-absolute"></div>
+        <div id="readbar" class="position-absolute"></div>
 
         <nav id="navbar" class="navbar container-fluid border-bottom position-relative">     
             <a href="index.html"><img src="img/logo-sm.png" alt="" class="float-left"></a>
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div id="display">
+        <div id="display" class="position-relative">
             <textarea id="text-display" type="text" class="text-input w-100" placeholder="Write text here"></textarea>
         </div>
 
