dyslexer web - add URL validation

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             Dyslexer is an online tool font converter that convert fonts to dyslexic friendly font. This tool aims to increase accessibility and ease readibility for users who suffers dyslexia.
                             </br>
                             </br>
-                            Dyslexer uses <a href="https://opendyslexic.org/" target="_blank">Open Dyslexic</a>, a typeface specifically designed against some common symptoms of dyslexia. This tool is open source and can be used in any project.
+                            Dyslexer uses <a href="https://opendyslexic.org/" target="_blank">Open Dyslexic</a>, a typeface specifically designed against some common symptoms of dyslexia. This tool is open sourced and can be used in any project.
                             </br>
                             </br>
                             Email to <a href="mailto:mkfizi93@gmail.com">mkfizi93@gmail.com</a> for feedback and suggestions.
